<resources>
    <string name="app_name">Business Card Scanner</string>
    <string name="back_capture_prompt_title">Capture back side?</string>
    <string name="back_capture_prompt_message">Would you like to capture the back side of this card?</string>
    <string name="capture_back">Capture Back</string>
    <string name="skip_back_capture">Skip</string>
    <string name="str_000_12345_6789">+000 12345 6789</string>
    <string name="str_abc_company">ABC Company</string>
    <string name="str_abc_email_com">abc@email.com</string>
    <string name="str_about">About</string>
    <string name="str_address">Address</string>
    <string name="str_adjust_corners">Adjust Corners</string>
    <string name="str_allow">Allow</string>
    <string name="str_allow_business_card_scanner_to">Allow business card scanner to access photos on this device?</string>
    <string name="str_allow_business_card_scanning_t">Allow business card scanning to access Photos on this device?</string>
    <string name="str_any_other_extracted_text">Any other extracted text</string>
    <string name="str_auto_recommended">Auto (Recommended)</string>
    <string name="str_auto_resume">Auto Resume</string>
    <string name="str_b_amp_w">B&amp;W</string>
    <string name="str_b_amp_w_scan">B&amp;W Scan</string>
    <string name="str_back_side_picture">Back Side Picture</string>
    <string name="str_business_card_scanner">Business Card Scanner</string>
    <string name="str_call_on_phone">Call on Phone</string>
    <string name="str_camera">Camera</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_card_detail">Card Detail</string>
    <string name="str_card_preview">Card Preview</string>
    <string name="str_card_scanner">Card Scanner</string>
    <string name="str_card_scanning">Card Scanning</string>
    <string name="str_client">Client</string>
    <string name="str_company">Company</string>
    <string name="str_company_name">Company Name</string>
    <string name="str_confirm_crop">Confirm Crop</string>
    <string name="str_contact_information">Contact Information</string>
    <string name="str_delete">Delete</string>
    <string name="str_delete_card">Delete Card ?</string>
    <string name="str_delete_permanent">Delete Permanent</string>
    <string name="str_edit">Edit</string>
    <string name="str_email">Email</string>
    <string name="str_email_address">Email Address</string>
    <string name="str_extra_information">Extra Information</string>
    <string name="str_feedback">Feedback</string>
    <string name="str_front">Front</string>
    <string name="str_gallery">Gallery</string>
    <string name="str_general">General</string>
    <string name="str_group_tag">Group Tag</string>
    <string name="str_high_contrast">High Contrast</string>
    <string name="str_job_title">Job Title</string>
    <string name="str_languages">Languages</string>
    <string name="str_location">Location</string>
    <string name="str_magic_color">Magic Color</string>
    <string name="str_marketing_manager">Marketing Manager</string>
    <string name="str_messenger">Messenger</string>
    <string name="str_michal_johns">Michal Johns</string>
    <string name="str_michal_smith">Michal Smith</string>
    <string name="str_name">Name</string>
    <string name="str_no_record_found_yet">No Record Found Yet !</string>
    <string name="str_notes">Notes</string>
    <string name="str_original">Original</string>
    <string name="str_phone">Phone</string>
    <string name="str_phone_1">Phone 1</string>
    <string name="str_phone_2">Phone 2</string>
    <string name="str_phone_2_optional">Phone 2 (Optional)</string>
    <string name="str_phone_number">Phone Number</string>
    <string name="str_please_wait_while_we_extract_t">Please wait while we extract the contact details. This will only take a few seconds.</string>
    <string name="str_privacy_policy">Privacy Policy</string>
    <string name="str_processing">Processing...</string>
    <string name="str_rate_us">Rate Us</string>
    <string name="str_recycle_bin">Recycle Bin</string>
    <string name="str_restore">Restore</string>
    <string name="str_save_card">Save Card</string>
    <string name="str_save_in_gallery">Save in Gallery</string>
    <string name="str_save_to_device_contacts">Save to Device Contacts</string>
    <string name="str_scan_your_business_cards_insta">Scan your business cards instantly</string>
    <string name="str_scanning_your_card">Scanning Your Card</string>
    <string name="str_select_group">Select Group</string>
    <string name="str_setting">Setting</string>
    <string name="str_shadow_remove">Shadow Remove</string>
    <string name="str_share">Share</string>
    <string name="str_share_with_friends">Share with Friends</string>
    <string name="str_sharpen">Sharpen</string>
    <string name="str_skip">Skip</string>
    <string name="str_skip_for_now">Skip for now</string>
    <string name="str_street_name">Street Name</string>
    <string name="str_take_a_picture_from_backside_o">Take a picture from backside of your card !</string>
    <string name="str_take_picture">Take Picture</string>
    <string name="str_tap_to_scan_card">Tap to scan Card</string>
    <string name="str_this_card_will_be_moved_to_rec">This Card Will be moved to recycle bin.</string>
    <string name="str_today">Today</string>
    <string name="str_vip">VIP</string>
    <string name="str_whatsapp">Whatsapp</string>
    <string name="str_yes_delete">Yes, Delete</string>
</resources>
