<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Surface"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <!-- Back Button -->

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_back"
            app:tint="@color/TextPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Screen Title -->

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_card_detail"
            android:textColor="@color/TextPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btnBack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txtSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/str_contact_information"
            android:textColor="@color/TextPrimary"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/btnBack"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Form -->

        <LinearLayout
            android:id="@+id/formBlock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/txtSection"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Group Tag -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_group_tag"
                android:textColor="@color/TextPrimary"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/etGroup"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/edit_text_outline"
                android:hint="@string/str_vip"
                android:paddingHorizontal="14dp"
                android:textColor="@color/TextPrimary"
                android:textColorHint="@color/TextSecondary"  android:textSize="12sp"/>

            <!-- Name -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/str_name"
                android:textColor="@color/TextPrimary"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/edit_text_outline"
                android:hint="@string/str_michal_smith"
                android:paddingHorizontal="14dp"
                android:textColor="@color/TextPrimary"
                android:textColorHint="@color/TextSecondary"  android:textSize="12sp"/>

            <!-- Job Title -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/str_job_title"
                android:textColor="@color/TextPrimary"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/etJob"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/edit_text_outline"
                android:hint="@string/str_marketing_manager"
                android:paddingHorizontal="14dp"
                android:textColor="@color/TextPrimary"
                android:textColorHint="@color/TextSecondary"  android:textSize="12sp"/>

            <!-- Company -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/str_company"
                android:textColor="@color/TextPrimary"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/etCompany"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/edit_text_outline"
                android:hint="@string/str_abc_company"
                android:paddingHorizontal="14dp"
                android:textColor="@color/TextPrimary"
                android:textColorHint="@color/TextSecondary"  android:textSize="12sp"/>

            <!-- Phone -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/str_phone"
                android:textColor="@color/TextPrimary"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/edit_text_outline"
                android:hint="@string/str_000_12345_6789"
                android:inputType="phone"
                android:paddingHorizontal="14dp"
                android:textColor="@color/TextPrimary"
                android:textColorHint="@color/TextSecondary"  android:textSize="12sp"/>

            <!-- Email -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/str_email"
                android:textColor="@color/TextPrimary"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/edit_text_outline"
                android:hint="@string/str_abc_email_com"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="14dp"
                android:textColor="@color/TextPrimary"
                android:textColorHint="@color/TextSecondary"  android:textSize="12sp"/>

            <!-- Address -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/str_address"
                android:textColor="@color/TextPrimary"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/edit_text_outline"
                android:hint="@string/str_street_name"
                android:paddingHorizontal="14dp"
                android:textColor="@color/TextPrimary"
                android:textColorHint="@color/TextSecondary"  android:textSize="12sp"/>

        </LinearLayout>

        <!-- Save Button -->

        <Button
            android:id="@+id/btnSaveCard"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/str_save_card"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="26dp"
            app:backgroundTint="@color/PrimaryBlue"
            app:layout_constraintTop_toBottomOf="@id/formBlock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
