<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="210dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="18dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="12dp">

        <LinearLayout
            android:id="@+id/actionSave"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_download"
                app:tint="@color/PrimaryBlue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/str_save_in_gallery"
                android:textColor="@color/PrimaryBlue"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actionEdit"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_edit"
                app:tint="@color/PrimaryBlue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/str_edit"
                android:textColor="@color/PrimaryBlue"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actionDelete"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_delete"
                app:tint="@color/PrimaryBlue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/str_delete"
                android:textColor="@color/PrimaryBlue"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actionShare"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_share"
                app:tint="@color/PrimaryBlue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/str_share"
                android:textColor="@color/PrimaryBlue"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
